grammar.js
    source_file: $ => seq(
      optional(seq($._eol,repeat($._line_end))), // skip whitespace
      repeat($.line)
    ),

    line: $ => seq(
      optional($.line_number),
      optional($.label),
      choice(
        seq(
          repeat(
            seq(
              optional($._statement),
              choice(
                $.continuation,
                $.statement_separator
              ),
            ),
          ),
          $._statement,
        ),
        $._single_line_statement,
        $.multiline_comment,
        $.doc_comment
      ),
      seq($._eol,repeat($._line_end))
    ),

    _line_end: $ => /(\r?\n)/,

    _single_line_statement: $ => seq(
      choice(
        $.dim_statement,
        $.option_statement,
      ),
      optional($.comment)
    ),

    _statement: $ => choice(
      $.comment,
      seq(
        choice(
          ...getStatements($)
        ),
        optional($.comment)
      ),
      $.else_statement,
      $.if_statement
    ),

    dim_statement: $ => seq(
      alias(STATEMENTS.dim, "statement"),
      commaSep1(
        choice(
          alias($.dim_number, $.numberreference),
          alias($.dim_numeric_array, $.numberarray),
          alias($.dim_string, $.stringreference),
          alias($.dim_string_array, $.stringarray)
        )
      )
    ),

    dim_array_size: $ => seq(
      "(",
      commaSep1($.int),
      ")",
    ),

    print_statement: $ => seq(
      alias(STATEMENTS.print, "statement"),
      optional(choice(
        $.print_output,
        $.print_fields,
        $.print_border,
        $.print_using,
        seq(
          $.channel,
          choice(
            seq(
              ":",
              optional($.print_output)
            ),
            seq(
              ",",
              choice(
                $.print_fields,
                $.print_border,
                $.print_using,
              )
            )
          )
        )
      )),
      optional($.error_condition_list)
    ),

    line_number: $ => /\d{1,5}[ \t]/,
    
    stringreference: $ => seq(
      field("name", $.stringidentifier),
      repeat(
        seq(
          "(",
          $.range,
          ")"
        )
      )
    ),

    stringidentifier: $ => /[a-zA-Z_]\w*\$/,

    stringarray: $ => seq(
      $._mat,
      field("name", $.stringidentifier),
      repeat($.dimension)
    ),

    numberarray: $ => seq(
      $._mat,
      field("name", $.numberidentifier),
      optional($.dimension)
    ),

    numberidentifier: $ => token(prec(-1,/[a-zA-Z_]\w*/)),

    _mat: $ => /mat[ \t]/i,

    identifier: $ => /\w+\$?/,
    
