test/corpus/def.txt
============================================
Numeric Function Definition (w/params)
============================================

def fnfoo(a,b,c)
  print a,b,c
fnend

---
    (source_file
      (line
        (print_statement
          (identifier)))
      (line
        (print_statement
          (identifier))))

============================================
Numeric Function Definition (no params)
============================================

def fnfoo
  print bar
fnend

---
    (source_file
      (line
        (print_statement
          (identifier)))
      (line
        (print_statement
          (identifier))))

============================================
Numeric Function Definition (w/params)
============================================

def fnfoo(a,b,c)
  print a,b,c
fnend

---
    (source_file
      (line
        (print_statement
          (identifier)))
      (line
        (print_statement
          (identifier))))
